# monitor-name-generator

./: main.py  pyproject.toml
