[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["blepman - https://github.com/blepman"]
description = "A clone (sort of) of the halo monitor name generator at monitors.mradford.com"
name = "monitor-name-generator"
version = "0.1.0"
[tool.poetry.dependencies]
bottle = "0.12.18"
python = "^3.7"
[tool.poetry.dev-dependencies]
